# lab_ONIT

./: .env  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  init.sql  nginx.conf
.github/workflows/: ci-cd.yml
backend/: .env  Cargo.toml
backend/src/: entities.rs  main.rs
frontend/src/: App.jsx
